# take-home-task

./: README.md  constants.py  dataset.json  generating_dataset.py  main.py  pyproject.toml  retrieval.py  utils.py
